--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
 }
 
 body{
-    width: 100vw;
-    height: 100vh;
+/*     width: 100vw;
+    height: 100vh; */
     background-image: url(./assets/background.png);
     background-size: cover;
 
